nav display fix on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,6 +43,7 @@ body {
   flex-direction: column;
 }
 
+#header,
 #barba-wrapper {
   flex: 1 0 auto;
 }
